Add users controller and update main page

--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -14,4 +14,4 @@
     </ul></tr>
   <% end %>
 </table>
-
+<p>Would you like to save this list and access it privately? <%= link_to 'Sign up', new_user_path %> today!</p>
