Fix and change formatting across the site.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,10 +29,11 @@
     </div>
   </nav>
   <div class="container">
-
-    <%= render partial: "layouts/info_stuff", flash: flash %> 
-
-    <%= yield %>
+    <%= render partial: "layouts/info_stuff", flash: flash %>
+    
+    <div class="jumbotron">
+      <%= yield %>
+    </div>
   </div>
 </body>
 </html>
