--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New User:</h1>
-
-<%= render 'form' %>
-
+<div class="panel panel-primary">
+  <div class="panel-heading">
+    <div class="panel-title"><h2>Sign Up!</h2></div>
+  </div>
+  <div class="panel-body">
+    <%= render 'form' %>
+  </div>
+</div>
 <%= link_to 'Back', root_path %>
