Update table formatting to bootstrap.

--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -13,7 +13,7 @@
 </div><!-- Ends the layout's main div to create whitespace below -->
 <div class="jumbotron">
 
-  <table  cellspacing="1" width="500px" style="height: 200px" cellpadding="2" border="1">
+  <table class="table table-striped table-bordered table-condensed">
   <tr>
     <th>Produce</th>
     <th>Meat</th>
