--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -5,7 +5,8 @@
         <%= form_for :item do |item| %>
           <%= item.label :name, :class => 'span8 input-large search-query' %>
           <%= item.text_field :name, :class => 'span8 input-large'  %><br />
-          <%= select(:category, :id, @name_array) %>
+          <%= item.label :category %>
+          <%= item.select(:category, @category)%>
           <br />
           <%= item.submit "Add", :class => 'btn btn-primary btn-sm' %>
         <% end %><br />
