--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,1 +1,22 @@
-@import 'bootstrap'
+@import 'bootstrap';
+
+.row {
+  margin-top: 40px;
+  padding: 0 10px;
+}
+
+.clickable {
+  cursor: pointer;
+}
+
+.panel-heading div {
+  margin-top: -18px;
+  font-size: 15px;
+  span {
+    margin-left: 5px;
+  }
+}
+
+.panel-body {
+  display: none;
+}
