Fix problem with login and signup forms not displaying

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,9 +1,9 @@
 <div class="panel panel-primary">
   <div class="panel-heading">
     <div class="panel-title"><h2>Sign Up!</h2></div>
-  </div>
-  <div class="panel-body">
+  </div><br />
+  <div class="container">
     <%= render 'form' %>
-  </div>
+  </div><br />
 </div>
 <%= link_to 'Back', root_path %>
