--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -53,13 +53,15 @@
 							</tr>
 						</thead>
 						<tbody>
-							 <% for item in @items %>  
+							 <% for item in @items %>
+                 <% if item.user_id == @current.id %>  
                   <tr>  
                     <td><%= link_to item.name, 'http://www.redplum.com/search/index.html?key=' + item.name, :target => "_blank" %></td>  
                     <td><%= number_to_currency(item.price, :unit => "$") %></td>
                     <td><%= item.category %></td> 
                     <td><%= link_to '[x]', item, :method => :delete %></td>
                   </tr>  
+                <% end %>
               <% end %>
 						</tbody>
 					</table>
