--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,9 @@
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav ">
         <% if current_user %>
-          <br />Welcome <%= current_user.name %>!
+        <br /><p class="navbar-link">Welcome <%= current_user.name %>!</p>
         <% else %>
-          <br />Welcome Guest! Sign in to view your saved lists.
+          <br /><p class="navbar-link">Welcome Guest! Sign in to view your saved lists.</p>
         <% end %>
       </ul>
       <div class="nav navbar-nav navbar-right">
