Fix flash message displaying.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
     </div>
   </nav>
   <div class="container">
-    <%= render partial: "layouts/info_stuff" %>
+    <%= render partial: "layouts/info_stuff", flash: flash %>
     
     <div class="well">
       <%= yield %>
