--- a/app/views/layouts/_info_stuff.html.erb
+++ b/app/views/layouts/_info_stuff.html.erb
@@ -1,7 +1,7 @@
-<% flash.each do |name, info| %>
-<div class="alert <%= bootstrap_class_for(name) %> fade in">
-  <button type="button" class="close" data-dismiss="alert" aria-hidden="true" id="alert">&times;</button>
-  <%= info %>
-</div>
+<% flash.each do |type, message| %>
+  <div class="alert alert-<%= type.to_s == 'notice' ? 'success' : 'danger' %>">
+    <button class="close" data-dismiss="alert">×</button>
+    <%= message %>
+  </div>
 <% end %>
 
