--- a/app/views/layouts/_info_stuff.html.erb
+++ b/app/views/layouts/_info_stuff.html.erb
@@ -1,7 +1,7 @@
-<% flash.each do |type, message| %>
-  <div class="alert alert-<%= type.to_s == 'notice' ? 'success' : 'danger' %>">
-    <button class="close" data-dismiss="alert">×</button>
-    <%= message %>
-  </div>
-<% end %>
-
+<div id="flash">
+  <% flash.each do |type, message| %>
+    <div class="alert alert-<%= type.to_s == 'notice' ? 'success' : 'danger' %>">
+      <%= message %>
+    </div>
+  <% end %>
+</div>
