--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,8 +29,9 @@
     </div>
   </nav>
   <div class="container">
+    <div class"flash-navbar">
     <%= render partial: "layouts/info_stuff", flash: flash %>
-    
+    </div>    
     <div class="well">
       <%= yield %>
     </div>
